welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not found: value retuen
	retuen (!weekday || vacation)
        ^