welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	retuen (!weekday || vacation)
}
